file upload test

--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -22,11 +22,12 @@
     <div data-role="page" data-theme="a">
 
         <div data-role="header">
-            <a href="#" data-role="button" data-rel="back" class="ui-btn ui-btn-inline ui-corner-all">返回</a>
+            <a href="#" data-role="button" data-rel="back" class="ui-btn ui-btn-inline ui-corner-all">主页</a>
             <h1>用户登录</h1>
         </div>
 
         <div data-role="content">
+
             <form method="post" action="demo_form.php">
                 <div class="ui-field-contain">
                     <label for="stuID">学号:</label>
@@ -35,9 +36,9 @@
                     <label for="password">密码:</label>
                     <input type="password" name="password" id="password" placeholder="">
                 </div>
-
-                <input type="button" value="登录">
             </form>
+
+            <input type="button" value="登录">
         </div>
 
         <div data-role="footer">
