file upload test

--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -40,6 +40,7 @@
                     <label for="password">密码:</label>
                     <input type="password" name="password" id="password" placeholder="">
 
+                    <input id="selece-files" type="file" name="fileToUpload" />
                     <input id="do-upload" type="submit" value="上传" />
                 </div>
             </form>
