--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -22,7 +22,7 @@
     <div data-role="page" data-theme="a">
 
         <div data-role="header">
-            <a href="#" data-role="button" data-rel="back" class="ui-btn ui-btn-inline ui-corner-all">主页</a>
+            <a href="/" data-role="button" class="ui-btn ui-btn-inline ui-corner-all">主页</a>
             <h1>新用户注册</h1>
         </div>
 
@@ -40,12 +40,13 @@
                     <label for="password">密码:</label>
                     <input type="password" name="password" id="password" placeholder="">
 
-                    <input id="selece-files" type="file" name="fileToUpload" />
-                    <input id="do-upload" type="submit" value="上传" />
+                    <!-- <input id="selece-files" type="file" name="fileToUpload" />
+                    <input id="do-upload" type="submit" value="上传" /> -->
                 </div>
             </form>
 
             <input type="button" value="注册">
+            <span>已有账号？</span><a href="/signin">登录</a>
         </div>
 
         <div data-role="footer">
