--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -26,7 +26,39 @@
         </div>
 
         <div data-role="content">
+            <div class="center">
+                <div class="ui-grid-a">
+                    <div class="ui-block-a">
+                        <span class="greeting">早上好:</span>
+                        <span class="username">包子</span>
+                    </div>
+                    <div class="ui-block-b">
+                        <span class="date">2016/5/10 </span>
+                        <span class="weather">晴</span>
+                    </div>
+                </div>
+            </div>
+            <div class="add-news">
 
+                <form method="post" action="demo_form.php">
+                    <div class="ui-field-contain">
+                        <input name="addinfo" id="mood" type="text" placeholder="此刻想说点什么..."></input>
+                        <!-- <a href="" data-role="button" data-inline="true">发表</a> -->
+                    </div>
+                </form>
+
+            </div>
+            <div class="news-list">
+                <div class="news-item">
+                    <div class="author">
+                        <span>萌萌哒学弟</span>
+                        <span class="date">2016/5/9</span>
+                    </div>
+                    <div class="content">
+                        <p>矿场挖出金矿啦！只要转发说说并集齐20个赞就能免费获赠金条三斤！亏钱赚人气了！自家矿场绝对真实大家不要再问了</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div data-role="footer">
