--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -15,7 +15,7 @@
 
     <!-- 引入 jQuery Mobile 库 -->
     <script src="http://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
+    <script src="http://apps.bdimg.com/libs/zepto/1.1.4/zepto.min.js"></script>
 </head>
 <body>
 
