--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -33,12 +33,12 @@
                     <label for="stuID">学号:</label>
                     <input type="text" name="stuID" id="stuID">
 
-                    <label for="password">密码:</label>
-                    <input type="password" name="password" id="password" placeholder="">
+                    <label for="pass-word">密码:</label>
+                    <input type="password" name="password" id="pass-word" placeholder="">
                 </div>
             </form>
 
-            <input type="button" value="登录">
+            <input type="button" value="登录" id="sign-in-button">
             <a href="/signup">还没有账号？</a>
         </div>
 
