--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -22,7 +22,7 @@
     <div data-role="page" data-theme="a">
 
         <div data-role="header">
-            <a href="/" data-role="button" class="ui-btn ui-btn-inline ui-corner-all">主页</a>
+            <a href="javascript:window.location.href='/'" data-role="button" class="ui-btn ui-btn-inline ui-corner-all">主页</a>
             <h1>新用户注册</h1>
         </div>
 
@@ -46,7 +46,7 @@
             </form>
 
             <input type="button" value="注册" id="sign-up-button">
-            <span>已有账号？</span><a href="/signin">登录</a>
+            <span>已有账号？</span><a href="javascript:window.location.href='/signin'">登录</a>
         </div>
 
         <div data-role="footer">
