--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -22,7 +22,7 @@
     <div data-role="page" data-theme="a">
 
         <div data-role="header">
-            <a href="/" data-role="button" class="ui-btn ui-btn-inline ui-corner-all">主页</a>
+            <a href="javascript:window.location.href='/'" data-role="button" class="ui-btn ui-btn-inline ui-corner-all">主页</a>
             <h1>用户登录</h1>
         </div>
 
@@ -39,7 +39,7 @@
             </form>
 
             <input type="button" value="登录" id="sign-in-button">
-            <a href="/signup">还没有账号？</a>
+            <a href="javascript:window.location.href='/signup'">还没有账号？</a>
         </div>
 
         <div data-role="footer">
