--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,8 +29,8 @@
             <div class="center">
                 <div class="ui-grid-a">
                     <div class="ui-block-a">
-                        <span class="greeting">早上好:</span>
-                        <span class="username">包子</span>
+                        <span class="greeting"><%= greeting %>:</span>
+                        <span class="username"><%= name %></span>
                     </div>
                     <div class="ui-block-b">
                         <span class="date">2016/5/10 </span>
