import emitter from event

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -22,6 +22,7 @@
     <div data-role="page" data-theme="a">
 
         <div data-role="header">
+            <a href="/user/logout" class="ui-btn ui-icon-minus ui-btn-icon-left ui-btn-right">注销</a>
             <h1>最新动态</h1>
         </div>
 
@@ -66,6 +67,6 @@
         </div>
 
     </div>
-    <script src="/dist/font-end/signin.bundle.js"></script>
+    <script src="/dist/font-end/index.bundle.js"></script>
 </body>
 </html>
