--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -22,7 +22,7 @@
     <div data-role="page" data-theme="a">
 
         <div data-role="header">
-            <a href="/user/logout" class="ui-btn ui-icon-minus ui-btn-icon-left ui-btn-right">注销</a>
+            <a href="javascript:void(0)" class="ui-btn ui-icon-minus ui-btn-icon-left ui-btn-right" id="user-logout">注销</a>
             <h1>最新动态</h1>
         </div>
 
