--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -22,7 +22,7 @@
     <div data-role="page" data-theme="a">
 
         <div data-role="header">
-            <a href="javascript:window.location.href='/'" data-role="button" class="ui-btn ui-btn-inline ui-corner-all">主页</a>
+            <a href="javascript:window.location.href='/'" data-role="button" class="ui-btn ui-btn-inline ui-corner-all ui-btn-right">主页</a>
             <h1>新用户注册</h1>
         </div>
 
