--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -52,7 +52,7 @@
                 <form method="post" action="demo_form.php">
                     <div class="ui-field-contain">
                         <input name="addinfo" id="mood" type="text" placeholder="此刻想说点什么..."></input>
-                        <!-- <a href="" data-role="button" data-inline="true">发表</a> -->
+                        <a href="" data-role="button" class="ui-btn ui-shadow ui-corner-all" id="publish-button">发表</a>
                     </div>
                 </form>
 
