--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -22,7 +22,11 @@
     <div data-role="page" data-theme="a">
 
         <div data-role="header">
-            <a href="javascript:void(0)" class="ui-btn ui-icon-minus ui-btn-icon-left ui-btn-right" id="user-logout">注销</a>
+            <% if (name === "同学") { %>
+                <a href="javascript:void(0)" class="ui-btn ui-btn-icon-left ui-btn-right" id="user-log">登录</a>
+            <% } else { %>
+                <a href="javascript:void(0)" class="ui-btn ui-icon-minus ui-btn-icon-left ui-btn-right" id="user-logout">注销</a>
+            <% } %>
             <h1>最新动态</h1>
         </div>
 
@@ -34,7 +38,9 @@
                         <span class="username"><%= name %></span>
                     </div>
                     <div class="ui-block-b">
-                        <span class="date">2016/5/10 </span>
+                        <span class="date">
+                            <%= time %>
+                        </span>
                         <span class="weather">晴</span>
                     </div>
                 </div>
@@ -44,7 +50,7 @@
                 <form method="post" action="demo_form.php">
                     <div class="ui-field-contain">
                         <input name="addinfo" id="mood" type="text" placeholder="此刻想说点什么..."></input>
-                        <!-- <a href="" data-role="button" data-inline="true">发表</a> -->
+                        <a href="" data-role="button" data-inline="true" class="ui-btn ui-shadow ui-corner-all" id="publish-button">发表</a>
                     </div>
                 </form>
 
