--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -61,16 +61,8 @@
                 </form>
 
             </div>
-            <div class="news-list">
-                <div class="news-item">
-                    <div class="author">
-                        <span>萌萌哒学弟</span>
-                        <span class="date">2016/5/9</span>
-                    </div>
-                    <div class="content">
-                        <p>矿场挖出金矿啦！只要转发说说并集齐20个赞就能免费获赠金条三斤！亏钱赚人气了！自家矿场绝对真实大家不要再问了</p>
-                    </div>
-                </div>
+            <div id="news-list">
+                
             </div>
         </div>
 
