--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -39,10 +39,7 @@
                     </div>
                     <div class="ui-block-b">
                         <span class="date">
-                            <%= time %> &nbsp;
-                        </span>
-                        <span class="week">
-                            <%= week %>
+                            <%= time %> &nbsp;<%= week %>
                         </span>
                     </div>
                 </div>
@@ -62,7 +59,7 @@
 
             </div>
             <div id="news-list">
-                
+
             </div>
         </div>
 
