--- a/app/public/stylesheets/index.scss
+++ b/app/public/stylesheets/index.scss
@@ -12,6 +12,9 @@
         .author {
             // background-color: #4986e7;
             padding: 3px 5px;
+            .name {
+                color: #003366;
+            }
             .date {
                 float: right;
                 font-size: 0.9em;
