--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -28,7 +28,7 @@
 
         <div data-role="content">
 
-            <form method="post" action="demo_form.php">
+            <form>
                 <div class="ui-field-contain">
                     <label for="stuID">学号:</label>
                     <input type="text" name="stuID" id="stuID">
